fix: mjx in dark mode

--- a/Akina/css/dark.css
+++ b/Akina/css/dark.css
@@ -110,6 +110,9 @@
   .entry-content p, #toc strong, #toc-container a, h1.entry-title, .donate a, .post-share, .show-share, .entry-content h1, h2, h3, h4, h5 {
       color: var(--main-text-color);
   }
+  mjx-container{
+      color: var(--main-text-color);
+  }
   .entry-header hr {
       background: var(--img-br);
   }
